# OpenGL_test

./: CMakeLists.txt  FileUtils.cpp  FileUtils.h  NewTest.sln  block.cpp  buildandrun.bat  camera.cpp  camera.h  compile_flags.txt  gameObject.cpp  gameObject.h  glad.c  imgui.ini  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  programShader.cpp  programShader.h  shaders.cpp  shaders.h  texture.cpp  texture.h  vbo.cpp
Linking/include/glad/: glad.h
NewTest/: CMakeLists.txt  EBO.cpp  Light.cpp  Light.h  NewTest.vcxproj  VAO.h  VBO.cpp  camera.cpp  ebo.cpp  ebo.h  glad.c  main.cpp  mesh.cpp  mesh.h  programShader.cpp  programShader.h  shader.cpp  shader.h  shaders.cpp  shaders.h  texture.cpp  texture.h  vbo.cpp  vbo.h
NewTest/assets/: fragment_core.glsl  fragment_core2.glsl  vertex_core.glsl  vertex_light.glsl
NewTest/src/: block.cpp  block.h  camera.cpp  camera.h  ebo.cpp  ebo.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  programShader.h  stb.cpp  texture.cpp  texture.h  vao.h  vbo.h
NewTest/x64/Debug/: NewTest.exe.recipe  NewTest.ilk  vc143.idb
NewTest/x64/Debug/NewTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NewTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/: fragment_core.glsl  fragment_light.glsl  vertex_core.glsl  vertex_light.glsl
